--- a/cpda-chat/package.json
+++ b/cpda-chat/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^3.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "http-proxy-middleware": "^2.0.1",
+    "rc-progress": "^3.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-chat-ui": "^0.4.0",
@@ -41,5 +43,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
